welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:6: error: '(' expected but identifier found.
  if c>d{
     ^close10:12: error: illegal start of simple expression
}
^